@@ -258,6 +258,8 @@ public:
     
     friend class Binding ;
     
+    Environment() ;
+    
     /**
      * wraps the given environment
      *
