@@ -1,3 +1,8 @@
+2010-02-12  Romain Francois <romain@r-enthusiasts.com>
+
+	* src/Rcpp/Environment.h: Environment gains a default
+	constructor. This is needed for RInside.
+
 2010-02-10  Romain Francois <romain@r-enthusiasts.com>
 
 	* src/Rcpp/SEXP_Vector.h: SEXP_Vector (and therefore
